<resources>
    <string name="app_name">HealthCareApp</string>

    <string name="MediCare">MediCare</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="forget">Forget Password?</string>
    <string name="have">Don\'t you have an account?</string>
    <string name="google">Sign in with google</string>
    <string name="signfb">Sign in with facebook</string>
    <string name="signinmail">Sign in with gmail</string>
    <string name="SignUp">SIGNUP</string>
    <string name="buttonClick">buttonClick</string>
    <string name="back">Back</string>
    <string name="Login">Login</string>

    <string name="Email">Enter your email</string>
    <string name="terms">I agree to the MediCare Terms of Services and Privacy Policy</string>
    <string name="Already">Already have an account?</string>
    <string name="topic">Find Your desired health solution</string>
    <string name="ad">Early protection for \nyour family health</string>
    <string name="LearnMore">Learn More</string>
    <string name="UpcomingAppointments">Upcoming Appointments</string>
    <string name="viewall">view all</string>
    <string name="Generalcheckup">General check-up</string>
    <string name="apr12">Apr 12</string>
    <string name="Chardiologistcheckup">Chardiologist check-up</string>
    <string name="May22">May 22</string>
    <string name="home" />
    <string name="homeicon">home</string>
    <string name="shedule">shedule</string>
    <string name="profileicon">profileicon</string>
    <string name="articles">articles</string>
    <string name="FindDoctors">Find Doctors</string>
    <string name="generaldoc">General</string>
    <string name="Chardiolodist">Chardiolodist</string>
    <string name="LungSpecialist">Lung Specialist</string>
    <string name="Dentist">Dentist</string>
    <string name="Psyciatrist">Psyciatrist</string>
    <string name="Surgeon">Surgeon</string>
    <string name="Category">Category</string>
    <string name="RecommendedDoctors">Recommended Doctors</string>
    <string name="di">Dr.Hemantha Silva \nChardiologist</string>
    <string name="Recentlyvisiteddoctors">Recently visited doctors</string>
    <string name="DoctorDetails">Doctor Details</string>
    <string name="about">Dr. Silva is a compassionate and dedicated\nphysician committed to providing exceptional\ncare to his patients. With expertise in chardiology. </string>
    <string name="dd1">Wed\n24</string>
    <string name="dd2">Thu\n25</string>
    <string name="dd3">Fri\n26</string>
    <string name="dd4">Sat\n27</string>
    <string name="dd5">Sun\n28</string>
    <string name="dc2">Dr.Kelum\nResident Physician</string>
    <string name="Consult">Consultation start</string>
    <string name="consult1">You can consult your problems \nto the doctor</string>
    <string name="call">call</string>
    <string name="video">video</string>
    <string name="c1">Hello, How can I help you?</string>
    <string name="c2">I have been suffering from headache and cold for \n3 days.I took pericetamol.But I still have headache.</string>
    <string name="c3">Ok, Do you still have fever? Is the headache sever?</string>
    <string name="c4">I don\'t have fever but the headache is sever</string>
    <string name="on1" />
    <string name="onS1">Thousands of doctors and experts to help your health</string>
    <string name="onS2">Booking appoinments are simple and effortless</string>
    <string name="ar1">Study highlights areas where diabetics need more education</string>
    <string name="ar2">New technique tracks blood sugar with light</string>
    <string name="ar3">Nutrients like vitamin B12 and vitamin D potentially play a role in risk of multimorbidity in women</string>
    <string name="Order">Order quikly with prescription</string>
    <string name="m1">Panadol Syrup\n100ml\nRs.370</string>
    <string name="m2">Paracetamol \n500Mg (Spmc) \nRs.349.00 per pack</string>
    <string name="cart">cart</string>
    <string name="gen1">Dr. A. A. AHAMED RIYAAZ\nPhysician\nGeneral Physician\nConsultant Physician</string>
    <string name="gen2">Dr. N M PERERA\nPhysician\nConsultant Physician\nGeneral Physician</string>
    <string name="gen3">Dr (Mrs.) F.G. SIVAGNANAM\nPhysician</string>

</resources>