<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C5"
    tools:context=".Login">

    <EditText
        android:id="@+id/username"
        android:layout_width="345dp"
        android:layout_height="68dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/C3"
        android:drawableLeft="@drawable/username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColor="@color/C3"
        android:textColorHint="@color/C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="345dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/C3"
        android:drawableLeft="@drawable/password"
        android:drawableRight="@drawable/visibility"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/C3"
        android:textColorHint="@color/C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forget"
        android:textColor="@color/C3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/have"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:text="@string/have"
        android:textColor="@color/C3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="258dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/C2"
        android:text="LOGIN"
        android:textColor="@color/C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="OR"
        android:textColor="@color/C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/have" />

    <Button
        android:id="@+id/google"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/C2"
        android:drawableLeft="@drawable/google"
        android:text="@string/google"
        android:textColor="@color/C3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/fb"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/C2"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/signfb"
        android:textColor="@color/C3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="28dp"
        android:minHeight="48dp"
        android:onClick="buttonClick"
        android:text="@string/SignUp"
        android:textColor="@color/C4"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/have"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/mail"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/C2"
        android:drawableLeft="@drawable/mail"
        android:text="@string/signinmail"
        android:textColor="@color/C3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb" />

    <View
        android:id="@+id/divider2"
        android:layout_width="190dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/C3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <View
        android:id="@+id/divider3"
        android:layout_width="190dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/C3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="serif"
        android:text="@string/Login"
        android:textColor="@color/C4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>