<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/C5"
    tools:context=".HomeActivity">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="55dp"
      android:layout_height="55dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="24dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/profile" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:fontFamily="serif"
      android:text="@string/MediCare"
      android:textColor="@color/C4"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.501"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <SearchView
      android:id="@+id/searchView"
      android:layout_width="364dp"
      android:layout_height="49dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#74FFFFFF"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.51"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="284dp"
      android:layout_height="66dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="28dp"
      android:text="@string/topic"
      android:textColor="@color/C3"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="89dp"
      android:layout_height="86dp"
      android:layout_marginTop="32dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#B2FFFFFF"
      app:layout_constraintEnd_toStartOf="@+id/imageView5"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/searchView"
      app:srcCompat="@drawable/_0306560" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="89dp"
      android:layout_height="86dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#B2FFFFFF"
      app:layout_constraintEnd_toStartOf="@+id/imageView6"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/imageView4"
      app:layout_constraintTop_toTopOf="@+id/imageView4"
      app:srcCompat="@drawable/pharmacy" />

  <ImageView
      android:id="@+id/imageView6"
      android:layout_width="89dp"
      android:layout_height="86dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#B2FFFFFF"
      app:layout_constraintEnd_toStartOf="@+id/imageView7"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/imageView5"
      app:layout_constraintTop_toTopOf="@+id/imageView4"
      app:srcCompat="@drawable/lab" />

  <ImageView
      android:id="@+id/imageView7"
      android:layout_width="89dp"
      android:layout_height="86dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#B2FFFFFF"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/imageView6"
      app:layout_constraintTop_toTopOf="@+id/imageView4"
      app:srcCompat="@drawable/med" />

  <View
      android:id="@+id/view"
      android:layout_width="389dp"
      android:layout_height="135dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="@color/C2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView4" />

  <ImageView
      android:id="@+id/imageView8"
      android:layout_width="137dp"
      android:layout_height="127dp"
      android:layout_marginEnd="24dp"
      app:layout_constraintBottom_toBottomOf="@+id/view"
      app:layout_constraintEnd_toEndOf="@+id/view"
      app:layout_constraintTop_toTopOf="@+id/view"
      app:layout_constraintVertical_bias="1.0"
      app:srcCompat="@drawable/care" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="171dp"
      android:layout_height="59dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="12dp"
      android:text="@string/ad"
      android:textColor="@color/C3"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="@+id/view"
      app:layout_constraintTop_toTopOf="@+id/view" />

  <Button
      android:id="@+id/button"
      android:layout_width="137dp"
      android:layout_height="48dp"
      android:layout_marginStart="40dp"
      android:layout_marginTop="4dp"
      android:backgroundTint="@color/C3"
      android:text="@string/LearnMore"
      app:layout_constraintStart_toStartOf="@+id/view"
      app:layout_constraintTop_toBottomOf="@+id/textView8" />

  <TextView
      android:id="@+id/textView9"
      android:layout_width="248dp"
      android:layout_height="36dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="28dp"
      android:text="@string/UpcomingAppointments"
      android:textColor="@color/C3"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view" />

  <Button
      android:id="@+id/button2"
      android:layout_width="101dp"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:backgroundTint="@color/C5"
      android:text="@string/viewall"
      android:textSize="14sp"
      app:layout_constraintStart_toEndOf="@+id/textView9"
      app:layout_constraintTop_toBottomOf="@+id/view" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="389dp"
      android:layout_height="60dp"
      android:layout_marginTop="16dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#7FC1CF"
      android:drawableLeft="@drawable/general"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <TextView
      android:id="@+id/textView11"
      android:layout_width="198dp"
      android:layout_height="41dp"
      android:layout_marginStart="48dp"
      android:layout_marginTop="16dp"
      android:text="@string/Generalcheckup"
      android:textAlignment="center"
      android:textColor="@color/C4"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="@+id/textView10"
      app:layout_constraintTop_toTopOf="@+id/textView10"
      tools:ignore="MissingConstraints" />

  <Button
      android:id="@+id/button3"
      android:layout_width="96dp"
      android:layout_height="48dp"
      android:layout_marginEnd="20dp"
      android:backgroundTint="@color/C3"
      android:text="@string/apr12"
      app:layout_constraintBottom_toBottomOf="@+id/textView10"
      app:layout_constraintEnd_toEndOf="@+id/textView10"
      app:layout_constraintTop_toTopOf="@+id/textView10"
      app:layout_constraintVertical_bias="0.75"
      tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="389dp"
      android:layout_height="60dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/rounded_background"
      android:backgroundTint="#7FC1CF"
      android:drawableLeft="@drawable/chardio"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView10" />

  <TextView
      android:id="@+id/textView13"
      android:layout_width="232dp"
      android:layout_height="35dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="16dp"
      android:text="@string/Chardiologistcheckup"
      android:textAlignment="center"
      android:textColor="@color/C4"
      android:textSize="20sp"
      app:layout_constraintStart_toStartOf="@+id/textView12"
      app:layout_constraintTop_toTopOf="@+id/textView12" />

  <Button
      android:id="@+id/button4"
      android:layout_width="106dp"
      android:layout_height="48dp"
      android:layout_marginTop="4dp"
      android:layout_marginEnd="12dp"
      android:backgroundTint="@color/C3"
      android:text="@string/May22"
      app:layout_constraintEnd_toEndOf="@+id/textView12"
      app:layout_constraintTop_toTopOf="@+id/textView12" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="176dp"
      android:layout_marginTop="292dp"
      android:text="TextView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView12" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/bottomNavigationView"
      android:layout_width="415dp"
      android:layout_height="45dp"
      android:background="@color/C3"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/articles"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medarticles"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/shedule"
        app:layout_constraintEnd_toStartOf="@+id/imageButton11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/myshedule" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/profileicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profilepic" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/homeicon"
        app:layout_constraintEnd_toStartOf="@+id/imageButton10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>